--- a/css/kids-tea-res-more.css
+++ b/css/kids-tea-res-more.css
@@ -4,37 +4,45 @@
 }
 
 
-.imgbarn ,.imgteacher ,.imgrea ,.spaceimg{
+.imgbarn ,.imgteacher 
+,.imgrea ,.aiimg
+,.skjelletimg ,.ecoimg {
     display: flex;
     width: 100%;
     height: auto;
-}
-
-.kid-title ,.rea-title{
-    font-size: 1.2rem;
-    padding: 1rem;
 }
 
 .kidreadbox{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0.7rem;
 }
 
-.kid-title1 ,.teacher-title ,.rea-title1 ,.spcmann-title1{
-    padding-top: 0.7rem;
-    font-size: 0.8rem;
-    line-height: 1.5rem;
+.info-text{
+    font-size: 1rem;
+    padding: 1rem;
+    color: #000;
+    font-weight: bolder;
 }
 
-.teacher-title ,.rea-title1 ,.spcmann-title1{
-    margin: 0 1rem;
+.info-text-front{
+    font-size: 1.5rem;
+    padding: 1rem;
+    font-weight: bolder;
+}
+
+.info-text1
+,.info-text2{
+    font-weight: 500;
+    padding: 1rem;
+    font-size: 1rem;
+    line-height: 2rem;
 }
 
 .kidreadbox img{
-    width: 100%;
+    width: auto;
     height: auto;
+    padding: 0 0.7rem;
 }
 
 .librarybox img{
@@ -58,17 +66,118 @@
     height: auto; /* Maintain the aspect ratio */
 }
 
-.spcmann-title{
-    font-size: 2rem;
-    padding: 1rem;
-    color: white;
-    font-weight: bolder;
-}
-
 .text-container{
     padding-bottom: 1rem;
     color: white;
-    background: linear-gradient(0deg, #000 35.15%, rgba(166, 207, 255, 0.00) 123.15%);
+    background: linear-gradient(0deg, #0E0E0C 35.15%, rgba(166, 207, 255, 0.00) 123.15%);
 }
 
+.spaceimg{
+    width: 100%;
+    height: auto;
+}
 
+.spcimg-conatiner{
+    max-height: 250px;
+    width: 100%;
+    overflow: hidden;
+}
+
+.teleimg{
+    display: flex;
+    align-self: start;
+    height: 200px;
+    padding: 1rem;
+}
+
+.mammothimg{
+    width: 100%;
+    height: auto;
+}
+
+.skjelletimg{
+    margin: 1rem 0;
+}
+
+.biologyimg{
+    width: 100%;
+    height: auto;
+    margin: 1rem 0;
+}
+
+.imgmuseum {
+    height: auto;
+    width: 100%;
+    display: grid;
+    grid-row: 1/3;
+    grid-column: 1/3; 
+}
+
+.gridbox{
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    grid-template-rows: 4fr 1fr;
+}
+
+.container-text{
+    align-self: end;
+    grid-row: 1/3;
+    grid-column: 1/3;
+    background-color: rgba(0, 0, 0, 0.318);
+}
+
+.info-text-news{
+    font-size: 1.3rem;
+    color: white;
+    padding: 1rem 1rem 0.5rem 1rem;
+    font-weight: bolder;
+}
+
+.info-text-news1{
+    font-size: 2rem;
+    color: white;
+    padding: 0.7rem;
+    font-weight: bolder;
+    text-transform: uppercase;
+}
+
+.imgnattmuseum{
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-row: 1/3;
+    grid-column: 1/3;
+}
+
+.gridbox1{
+    margin: 0 1rem;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    grid-template-rows: 4fr 1fr;
+}
+
+.info-text-news2{
+    align-self: self-end;
+    grid-row: 1/3;
+    grid-column: 1/3;
+    font-size: 1.7rem;
+    color: white;
+    padding: 1rem;
+    font-weight: bolder;
+}
+
+.gridbox-container{
+    background-color: #E7E7E7;
+    grid-row: 3;
+    grid-column: 1/3;
+}
+
+.night-text{
+    color: black;
+    font-weight: 500;
+    padding: 1rem;
+    font-size: 1rem;
+    line-height: 2rem;
+}
