--- a/css/footer.css
+++ b/css/footer.css
@@ -132,3 +132,14 @@ p .title3:first-child{
     font-size: 6px;
     margin-bottom: 0.5rem;
 }
+
+.socials{
+    padding: 1.5rem 1rem 0 1rem;
+}
+
+.socials i{
+    border-radius: 50%;
+    padding: 0.5rem;
+    background-color: black;
+    margin: 0.3rem;
+}
