--- a/css/kids-tea-res-more.css
+++ b/css/kids-tea-res-more.css
@@ -3,10 +3,14 @@
     font-family: 'Lato', sans-serif;
 }
 
+body{
+    scroll-behavior: smooth;
+}
+
 
 .imgbarn ,.imgteacher 
 ,.imgrea ,.aiimg
-,.skjelletimg ,.ecoimg {
+,.skjelletimg ,.ecoimg ,.imgexo{
     display: flex;
     width: 100%;
     height: auto;
@@ -19,7 +23,7 @@
 }
 
 .info-text{
-    font-size: 1rem;
+    font-size: 1.2rem;
     padding: 1rem;
     color: #000;
     font-weight: bolder;
@@ -174,10 +178,119 @@
     grid-column: 1/3;
 }
 
-.night-text{
-    color: black;
+.info-textnw{
     font-weight: 500;
-    padding: 1rem;
+    padding: 0 2rem 2rem 2rem;
     font-size: 1rem;
     line-height: 2rem;
+}
+
+.text-container1{
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    background-color: #E7E7E7;
+}
+
+.big-text{
+    padding: 2rem 0;
+    color: #000;
+    font-size: 2rem;
+    font-weight: bolder;
+}
+
+.open-text{
+    font-weight: bolder;
+    font-size: 1rem;
+}
+
+.grey-text{
+    color: rgba(0, 0, 0, 0.60);
+    font-weight: 500;
+}
+
+.grey-text:last-child{
+    padding-bottom: 3rem;
+}
+
+iframe{
+    width: 100%;
+    height: 300px;
+}
+
+.map-container{
+    margin: 1rem;
+    border: 1px solid black;
+}
+
+.map-text{
+    background-color: #363636;
+    font-size: 1.5rem;
+    padding: 1rem;
+    font-weight: bolder;
+    color: white;
+}
+
+.highlight{
+    font-weight: 500;
+    padding: 0 2rem 2rem 2rem;
+    font-size: 1rem;
+    line-height: 2rem;
+}
+
+:target {
+    background-color: yellow;
+    scroll-margin-top: 150px;
+    animation: highlight 1s ease-out forwards;
+}
+
+@keyframes highlight{
+    to {
+        background-color: transparent;
+    }
+}
+
+:target {
+    background-color: yellow;
+    scroll-margin-top: 200px;
+    animation: highlight 1s ease-out forwards;
+}
+
+@keyframes highlight1{
+    to {
+        background-color: transparent;
+    }
+}
+
+
+.container{
+    display: grid;
+    margin: 1rem;
+    overflow: hidden;
+    grid-template-columns: 1fr 1fr;
+}
+
+.imgmann{
+    object-fit: cover;
+    margin-right: 1rem;
+    width: 100%;
+    height: 100%;
+}
+
+.highlight1{
+    font-weight: 500;
+    padding: 0 2rem 2rem 2rem;
+    font-size: 3vw;
+    line-height: 2rem;
+}
+
+.shop-container{
+    margin: 1rem;
+    border: 1px solid black;
+}
+
+.img-shop{
+    max-width: 200px;
+    max-height: 200px;
 }
