--- a/css/footer.css
+++ b/css/footer.css
@@ -146,26 +146,68 @@ p .title3:first-child{
 
 @media (min-width: 680px){
     .footer-container{
+        margin-top: 2rem;
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(5, 1fr);
         grid-template-rows: repeat(1, 1fr);
     }
     .boxfooter{
-        grid-row: 3;
-        grid-column: 2;
+        grid-column: 4/6;
+        grid-row: 2/9;
     }
     .title1{
-        grid-row: 4;
+        grid-row: 8;
         grid-column: 1;
     }
 
     .title2{
-        grid-row: 5;
+        grid-row: 9;
         grid-column: 1;
     }
 
     #csm{
-        
+        grid-row: 7;
+        grid-column: 1;
     }
 
+    .title{
+        grid-row: 6;
+        grid-column: 1;
+    }
+
+    .square-under{
+        grid-row: 3;
+        grid-column: 1;
+    }
+
+    .subscribe{
+        grid-row: 4;
+        grid-column: 1;
+    }
+    
+    .boxnmail{
+        grid-row: 2;
+
+    }
+    .copyright{
+        grid-row: 10;
+        grid-column: 4/6;
+        font-size: 0.7rem;
+    }
+    .center{
+        max-width: 1000px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    hr{
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 900px;
+    }
+
+    .logoimg{
+        grid-row: 9;
+        grid-column: 5;
+    }
 }
