--- a/css/header.css
+++ b/css/header.css
@@ -86,6 +86,18 @@ nav.hamburger ul {
     right: 0px;
 }
 
+.headerbox1{
+    display: none;
+}
+
+.headerbox1 a{
+    margin: 0 1rem;
+    color: #000000;
+    font-weight: bolder;
+    font-size: 0.9rem;
+    text-decoration: none;
+}
+
 nav.hamburger li a { 
     text-decoration: none; 
     color: white; 
@@ -104,4 +116,31 @@ nav.hamburger li:last-child {
 nav.hamburger li a:hover {
     color: black; 
     background: white;  
+}
+
+@media (min-width: 680px){
+    .headerbox{
+        display: flex;
+        max-width: 1000px;
+        margin-left: auto;
+        margin-right: auto;
+        justify-content: space-between;
+    }
+    #menu{
+        display: none;
+    }
+
+    .headerbox{
+        display: flex;
+    }
+
+    .headerbox1{
+        display: flex;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        align-items: center;
+        justify-content: end;
+    }
+
 }
