--- a/css/kids-tea-res-more.css
+++ b/css/kids-tea-res-more.css
@@ -294,3 +294,85 @@ iframe{
     max-width: 200px;
     max-height: 200px;
 }
+
+@media (min-width: 680px){
+    .imgbarn-container{
+        height: 250px;
+        width: 100%;
+        overflow: hidden;
+        max-width: 1000px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .kid-container{
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+        grid-template-rows: repeat(1, 1fr);
+        grid-gap: 1rem;
+        max-width: 1000px;
+        margin-left: auto;
+        margin-right: auto;
+        object-fit: cover;
+    }
+
+    #infotext{
+        grid-column: span 2;
+        grid-row: 1/2;
+        font-size: 1.3rem;
+        margin: 1rem 0;
+    }
+
+    .kidreadbox{
+        grid-row: 2;
+        grid-column: 1;
+    }
+
+    .librarybox{
+        grid-row: 2;
+    
+    }
+
+    hr{
+        display: none;
+    }
+
+    .gridbox2{
+        display: grid;
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        max-width: 1000px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #infotext1{
+        grid-row: 2;
+        grid-column: 1;
+        font-size: 1rem;
+        margin-bottom: 1rem;
+        margin: 1rem;
+    }
+
+    #imgteacher1{
+        height: 400px;
+        object-fit: cover;
+        grid-row: 1;
+        grid-column: 1/3;
+    }
+
+    #imgteacher2{
+        grid-row: 2;
+        grid-column: 2;
+        height: 300px;
+        width: auto;
+        justify-self: center;
+        margin: 1rem;
+    }
+
+    .imgrea{
+        height: 400px;
+        object-fit: cover;
+    }
+
+}
