--- a/css/style.css
+++ b/css/style.css
@@ -187,27 +187,27 @@
         grid-row: 1;
         grid-column: 1;
         align-self: self-end;
-        font-size: 1.6rem;
+        font-size: 1.3rem;
     }
 
     #readmorekid{
         grid-row: 6;
         grid-column: 1;
         padding: 1rem 2rem;
-        font-size: 1.3rem;
+        font-size: 1rem;
     }
 
     #teachertext{
         grid-row: 1;
         grid-column: 3;
         align-self: self-end;
-        font-size: 1.6rem;
+        font-size: 1.3rem;
     }
 
     #restext{
         grid-row: 7;
         grid-column: 1;
-        font-size: 1.6rem;
+        font-size: 1.3rem;
     }
 
     #hide{
@@ -222,7 +222,7 @@
         grid-column: 3;
         grid-row: 6;
         padding: 1rem 2rem;
-        font-size: 1.3rem;
+        font-size: 1rem;
     }
 
     #kidread{
@@ -258,11 +258,11 @@
     #readmorerea{
         grid-row: 9;
         padding: 1rem 2rem;
-        font-size: 1.3rem;
+        font-size: 1rem;
     }
 
     .text1{
-        font-size: 1.6rem;
+        font-size: 1.3rem;
     }
     
     .grid-container{
@@ -272,6 +272,7 @@
         max-width:1000px;
         margin-left: auto;
         margin-right: auto;
+        margin-bottom: 4rem;
     }
     #left-news{
         grid-row: 2;
