--- a/css/kids-tea-res-more.css
+++ b/css/kids-tea-res-more.css
@@ -306,7 +306,7 @@ iframe{
         margin-right: auto;
     }
 
-    #show{
+    .show{
         display: block;
         margin: 5px 10rem;
     }
