--- a/css/style.css
+++ b/css/style.css
@@ -60,13 +60,6 @@
     opacity: 1;
 }
 
-.imgbarn{
-    display: flex;
-    width: 100%;
-    height: auto;
-    padding-top: 2rem;
-}
-
 .text{
     font-size: 1.3rem;
     font-weight: bolder;
@@ -210,7 +203,7 @@
         font-size: 1.3rem;
     }
 
-    #hide{
+    .hide{
         display: none;
     }
 
