--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,25 @@
     font-family: 'Lato', sans-serif;
 }
 
+.img-container,
+.imgbarn,
+.imgteacher,
+.imgrea,
+.aiimg,
+.skjelletimg,
+.ecoimg,
+.imgexo,
+.kidreadbox img,
+.librarybox img,
+.imgmuseum,
+.imgnattmuseum,
+.imgspcmann,
+.biologyimg {
+    display: flex;
+    width: 100%;
+    height: auto;
+}
+
 .frontbox img{
     display: block;
     width: 100%;
@@ -128,25 +147,24 @@
     height: 180px;
 }
 
-.spa{
-    display: none;
-}
-
 /* Media query for screens with a maximum width of 1000px */
 @media (min-width: 680px) {
-    .frontbox{
+    .frontbox ,.grid-container{
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(1, 1fr);
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 1000px;
     }
     .space-box{
         max-width:1000px ;
         height: auto;
-        grid-column: span 2
+        grid-column: 1/2;
     }
     .frontbox1{
         grid-row: 1/2;
-        grid-column:3/5;
+        grid-column:2/3;
         max-width:1000px;
     }
     .frontbox ,.center{
@@ -156,14 +174,10 @@
         height: 30%;
     }
 
-    .center-box{
-        display: flex;
-        justify-content: center;
-    }
     .center-box1{
         display: grid;
-        grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(1, 1fr);
         grid-gap: 1rem;
         margin-left: auto;
         margin-right: auto;
@@ -171,9 +185,8 @@
     }
 
     .imgbarn{
-        padding: 0;
-        grid-row: 2/4;
-        grid-column: 1/3;
+        grid-row: 2;
+        grid-column: 1;
     }
 
     #kidtext{
@@ -184,7 +197,7 @@
     }
 
     #readmorekid{
-        grid-row: 6;
+        grid-row: 4;
         grid-column: 1;
         padding: 1rem 2rem;
         font-size: 1rem;
@@ -192,13 +205,13 @@
 
     #teachertext{
         grid-row: 1;
-        grid-column: 3;
+        grid-column: 2;
         align-self: self-end;
         font-size: 1.3rem;
     }
 
     #restext{
-        grid-row: 7;
+        grid-row: 5;
         grid-column: 1;
         font-size: 1.3rem;
     }
@@ -208,19 +221,19 @@
     }
 
     #student{
-        grid-row: 2/5;
-        grid-column: 3/7;
+        grid-column: 2/4;
+        grid-row: 2/4;
     }
     #studentreadmore{
-        grid-column: 3;
-        grid-row: 6;
+        grid-column: 2;
+        grid-row: 4;
         padding: 1rem 2rem;
         font-size: 1rem;
     }
 
     #kidread{
-        grid-row: 4/5;
-        grid-column: 1/3;
+        grid-row: 3;
+        grid-column: 1;
     }
 
     #reatext{
@@ -229,12 +242,8 @@
     }
 
     #researchers{
-        grid-row: 8;
-        grid-column: span 7;
-    }
-
-    .spa{
-        display: block;
+        grid-row: 6;
+        grid-column: 1/4;
     }
 
     .transfrom-text{
@@ -249,7 +258,7 @@
         padding: 1rem;
     }
     #readmorerea{
-        grid-row: 9;
+        grid-row: 7;
         padding: 1rem 2rem;
         font-size: 1rem;
     }
@@ -258,15 +267,6 @@
         font-size: 1.3rem;
     }
     
-    .grid-container{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 1rem;
-        max-width:1000px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 4rem;
-    }
     #left-news{
         grid-row: 2;
     }
