--- a/css/kids-tea-res-more.css
+++ b/css/kids-tea-res-more.css
@@ -4,7 +4,7 @@
 }
 
 .img-container,
-.imgbarn,
+.img-barn,
 .imgteacher,
 .imgrea,
 .aiimg,
@@ -57,6 +57,7 @@ body{
 .librarybox p{
     padding: 0.7rem;
 }
+
 
 .text-container{
     padding-bottom: 1rem;
@@ -285,7 +286,7 @@ iframe{
 }
 
 @media (min-width: 680px){
-    .imgbarn-container{
+    .img-barn-container{
         height: 250px;
         width: 100%;
         overflow: hidden;
@@ -539,7 +540,7 @@ iframe{
         margin-top: 1rem;
     }
 
-    .text-box{
+    .text-box-eco{
         align-self: center;
     }
 
