--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
+/* Apply default styles to all elements */
 * {
     margin: 0;
     font-family: 'Lato', sans-serif;
 }
-
+/* Define shared styles for various images */
 .img-container,
-.imgbarn,
+.img-barn,
 .imgteacher,
 .imgrea,
 .aiimg,
@@ -16,85 +17,86 @@
 .imgmuseum,
 .imgnattmuseum,
 .imgspcmann,
-.biologyimg {
+.biologyimg
+,.vr-mann-box 
+,.mikroskop-mann{
     display: flex;
     width: 100%;
     height: auto;
 }
-
-.frontbox img{
+/* Define specific styles for images in the front box */
+.front-box img{
     display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
     overflow: hidden;
 }
-
-.frontbox{
+/* Styles for a container with flex-direction column in the front box */
+.front-box{
     display: flex;
     flex-direction: column;
 }
 
-.space-box{
+.space-img{
     height: 230px;
 }
 
-.frontbox1 img{
+.front-box1 img{
     min-width: 120px;
     height: auto;
     
 }
-
-.frontbox1{
+/* Styling for a specific image */
+.front-box1{
     width: 100%;
     height: auto;
     display: flex;
     position: relative;
 }
-
-.textbox{
+/* Container for text that transforms on hover */
+.text-box-read{
     display: flex;
     align-items: end;
-    color: white;
     bottom: 0;
     left: 0;
     right: 0;
     position: absolute;
     background-color: #00000063;
     width: 100%;
-    height: 40%;
+    height: 30%;
     opacity: 0;
     transition: opacity 0.25s;
-    font-size: 1.5rem;
+    font-size: 1.5;
 }
-
+/* Text inside the transform box */
 .transfrom-text{
     color: white;
     font-size: 7vw;
     padding:  0.5rem;
     margin: 0.5rem;
 }
-
-.frontbox1:hover .textbox{
+/* Display the text box on hover */
+.front-box1:hover .text-box-read{
     opacity: 1;
 }
-
+/* Additional text styling */
 .text{
     font-size: 1.3rem;
     font-weight: bolder;
     padding: 1.3rem;
 }
-
-.imgbox{
+/* Container for images */
+.img-box{
     display: flex;
 }
-
+/* Container for kid read box */
 .kidreadbox{
     display: flex;
     width: 50%;
     height: auto;
 }
-
+/* Read more button styling */
 .read-more{
     width: 100px;
     display: block; /* Use block display to ensure it appears on a new line */
@@ -105,17 +107,13 @@
     text-align: center;
     margin: 1rem;
 }
-.vrmanbox{
-    width: 100%;
-    height: auto;
-}
-
+/* Text styling for news container */
 .text1{
     font-size: 1rem;
     font-weight: bolder;
     padding: 1rem 1rem 0.5rem 1rem;
 }
-
+/* News container styles */
 .news{
     display: flex;
 }
@@ -129,14 +127,14 @@
 .news img {
     width: 50%;
 }
-
+/* Styles for text container */
 .text-container nav ul li{
     margin: 1rem 1rem 0 0;
     text-decoration: none;
     list-style-type: none;
     padding: 0.5rem 0;
 }
-
+/* Styles for text container links */
 .text-container nav ul li a{
     color: white;
     font-size: 1rem;
@@ -147,9 +145,10 @@
     height: 180px;
 }
 
-/* Media query for screens with a maximum width of 1000px */
+/* Media query for screens with a minimum width of 680px */
 @media (min-width: 680px) {
-    .frontbox ,.grid-container{
+    /* Apply grid layout to front box and grid container */
+    .front-box ,.grid-container{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(1, 1fr);
@@ -157,24 +156,28 @@
         margin-right: auto;
         max-width: 1000px;
     }
-    .space-box{
+    /* Adjust max-width for space image */
+    .space-img{
         max-width:1000px ;
         height: auto;
         grid-column: 1/2;
     }
-    .frontbox1{
+    /* Position front box 1 in the grid */
+    .front-box1{
         grid-row: 1/2;
         grid-column:2/3;
         max-width:1000px;
     }
-    .frontbox ,.center{
+    /* Apply max-width to front box and center */
+    .front-box ,.center{
         max-width: 1000px;
     }
-    .textbox{
-        height: 30%;
+     /* Adjust height for text box on hover */
+    .text-box-read{
+        height: 40%;
     }
-
-    .center-box1{
+    /* Apply grid layout to main grid box */
+    .grid-box-main{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(1, 1fr);
@@ -184,54 +187,55 @@
         max-width: 1000px;
     }
 
-    .imgbarn{
+    .img-barn{
         grid-row: 2;
         grid-column: 1;
     }
-
-    #kidtext{
+     /* Position and style specific elements in the main grid */
+    #kid-text{
         grid-row: 1;
         grid-column: 1;
         align-self: self-end;
         font-size: 1.3rem;
+        
     }
 
-    #readmorekid{
+    #read-more-kid{
         grid-row: 4;
         grid-column: 1;
         padding: 1rem 2rem;
         font-size: 1rem;
     }
 
-    #teachertext{
+    #teacher-text{
         grid-row: 1;
         grid-column: 2;
         align-self: self-end;
         font-size: 1.3rem;
     }
 
-    #restext{
+    #researchers-text{
         grid-row: 5;
         grid-column: 1;
         font-size: 1.3rem;
     }
-
+    /* Hide specific elements */
     .hide{
         display: none;
     }
 
-    #student{
+    #student-box{
         grid-column: 2/4;
         grid-row: 2/4;
     }
-    #studentreadmore{
+    #read-more-student{
         grid-column: 2;
         grid-row: 4;
         padding: 1rem 2rem;
         font-size: 1rem;
     }
 
-    #kidread{
+    #kid-box{
         grid-row: 3;
         grid-column: 1;
     }
@@ -240,33 +244,32 @@
         grid-row: 6;
         grid-column: 1;
     }
-
-    #researchers{
-        grid-row: 6;
-        grid-column: 1/4;
-    }
-
+    /* Adjust font size for transform text on larger screens */
     .transfrom-text{
-        font-size: 2.5vw;
+        font-size: 2rem;
         padding: 1rem;
     }
-    #vrmann{
+    /* Style mikroskop mann image in the main grid */
+    .mikroskop-mann{
         object-fit: cover;
         overflow: hidden;
         width: 100%;
         height: 330px;
         padding: 1rem;
+        grid-row: 6;
+        grid-column: 1/4;
+        font-size: 1.3rem;
     }
-    #readmorerea{
+    #read-more-rea{
         grid-row: 7;
         padding: 1rem 2rem;
         font-size: 1rem;
     }
-
+    /* Adjust font size for text1 */
     .text1{
         font-size: 1.3rem;
     }
-    
+    /* Position left and right news elements in the grid */
     #left-news{
         grid-row: 2;
     }
