--- a/css/style.css
+++ b/css/style.css
@@ -4,20 +4,19 @@
     font-family: 'Lato', sans-serif;
 }
 /* Define shared styles for various images */
-.img-container,
 .img-barn,
-.imgteacher,
-.imgrea,
-.aiimg,
-.skjelletimg,
-.ecoimg,
-.imgexo,
+.img-teacher,
+.img-rea,
+.ai-img,
+.skjellet-img,
+.eco-img,
+.img-exo,
 .kidreadbox img,
 .librarybox img,
-.imgmuseum,
-.imgnattmuseum,
-.imgspcmann,
-.biologyimg
+.img-museum,
+.img-natt-museum,
+.img-spc-mann,
+.biology-img
 ,.vr-mann-box 
 ,.mikroskop-mann{
     display: flex;
@@ -255,7 +254,6 @@
         overflow: hidden;
         width: 100%;
         height: 330px;
-        padding: 1rem;
         grid-row: 6;
         grid-column: 1/4;
         font-size: 1.3rem;
